--- a/resources/style.css
+++ b/resources/style.css
@@ -1,8 +1,38 @@
 html {
   font-size: 16px;
   font-family: Helvetica, sans-serif;
+  background-color: #003049;
+  border-width: 0.9rem;
+  border-style: solid;
+  border-color: black;
+
+  margin: 0;
 }
 
 .sticky {
   position: sticky;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.emphasis {
+  color: #F77F00;
+  font-size: 175%;
+  transition: 1s;
+}
+
+.emphasis:hover {
+  color: #FCBF49;
+  cursor: pointer;
+  transition: 1s;
 }
