--- a/resources/style.css
+++ b/resources/style.css
@@ -2,7 +2,7 @@ html {
   font-size: 16px;
   font-family: Helvetica, sans-serif;
   background-color: #003049;
-  border-width: 0.9rem;
+  border-width: 1.5vw;
   border-style: solid;
   border-color: black;
 
