--- a/resources/base.css
+++ b/resources/base.css
@@ -11,7 +11,7 @@
 }
 
 .main {
-  margin-left: 12%;
+  margin-left: 12vw;
 }
 
 .intro {
@@ -32,7 +32,7 @@
   padding-top: 3vw;
   padding-left: 3vw;
   position: fixed;
-  height: 100vw;
+  height: 200vw;
   width: 7vw;
   overflow: auto;
 
