--- a/resources/style.css
+++ b/resources/style.css
@@ -2,9 +2,7 @@ html {
   font-size: 16px;
   font-family: Helvetica, sans-serif;
   background-color: #003049;
-  border-width: 1.5vw;
-  border-style: solid;
-  border-color: black;
+  padding: 0.75vw;
 
   margin: 0;
 }
@@ -29,10 +27,30 @@ html {
   color: #F77F00;
   font-size: 175%;
   transition: 1s;
+  text-decoration: none;
 }
 
 .emphasis:hover {
   color: #FCBF49;
   cursor: pointer;
   transition: 1s;
+}
+
+.floating:hover {
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 3vw;
+    margin-top: 0.5vh;
+}
+
+@keyframes floating {
+    from { transform: translate(0,  0px); }
+    65%  { transform: translate(0, 15px); }
+    to   { transform: translate(0, -0px); }
+}
+
+.lighter {
+  font-weight: lighter;
 }
