--- a/resources/style.css
+++ b/resources/style.css
@@ -2,8 +2,11 @@ html {
   font-size: 16px;
   font-family: Helvetica, sans-serif;
   background-color: #003049;
-  padding: 0.75vw;
+}
 
+.main {
+  padding: 0.75vw;
+  background-color: #003049;
   margin: 0;
 }
 
