--- a/resources/base.css
+++ b/resources/base.css
@@ -73,7 +73,7 @@
 
 .intro {
   color: #EAE2B7;
-  font-size: 1.75vw;
+  font-size: 4vh;
   cursor: default;
   padding-top: 12.5vw;
   margin-left: 12vw;
@@ -116,13 +116,49 @@
   transition: 1s;
 }
 
-.projects {
+.background-text {
   position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 
   z-index: -1;
+}
+
+.project-box {
+  margin: 40vh 7vw;
+
+  height: 100vh;
+  width: 40vw;
+  opacity: 0.7;
+
+  background-color: black;
+
+  transition: 1s;
+}
+
+.project-box:hover {
+  opacity: 1;
+  width: 41vw;
+  height: 101vh;
+
+  transition: 1s;
+}
+
+.project-image {
+  background-color: white;
+  height: 70vh;
+  width: 100%;
+}
+
+.project-text {
+  padding: 2vh 2vw;
+  color: white;
+  line-height: 2vh;
+}
+
+.project-text h3 {
+  font-size: 2vh;
 }
 
 .footer {
@@ -168,7 +204,7 @@
 
 #navtext {
   color: #EAE287;
-  font-size: 1.5vw;
+  font-size: 3vh;
   cursor: default;
   writing-mode: vertical-rl;
   text-orientation: sideways-right;
@@ -200,8 +236,6 @@
 }
 
 #bg-title {
-  z-index: -1;
-
   letter-spacing: 3px;
   text-transform: uppercase;
   font-size: 5vw;
