--- a/resources/base.css
+++ b/resources/base.css
@@ -73,7 +73,7 @@
 
 .intro {
   color: #EAE2B7;
-  font-size: 4vh;
+  font-size: 1.75vw;
   cursor: default;
   padding-top: 12.5vw;
   margin-left: 12vw;
@@ -158,7 +158,15 @@
 }
 
 .project-text h3 {
-  font-size: 2vh;
+  font-size: 1.75vw;
+}
+
+.project-text h4 {
+  font-size: 1.25vw;
+}
+
+.project-text p {
+  font-size: 1vw;
 }
 
 .footer {
@@ -204,7 +212,7 @@
 
 #navtext {
   color: #EAE287;
-  font-size: 3vh;
+  font-size: 1.5vw;
   cursor: default;
   writing-mode: vertical-rl;
   text-orientation: sideways-right;
