--- a/resources/base.css
+++ b/resources/base.css
@@ -147,7 +147,7 @@
 
 .project-image {
   background-color: white;
-  height: 70vh;
+  height: 65vh;
   width: 100%;
 }
 
@@ -158,15 +158,15 @@
 }
 
 .project-text h3 {
-  font-size: 1.75vw;
+  font-size: 4vh;
 }
 
 .project-text h4 {
-  font-size: 1.25vw;
+  font-size: 3vh;
 }
 
 .project-text p {
-  font-size: 1vw;
+  font-size: 2vh;
 }
 
 .footer {
@@ -212,7 +212,7 @@
 
 #navtext {
   color: #EAE287;
-  font-size: 1.5vw;
+  font-size: 3vh;
   cursor: default;
   writing-mode: vertical-rl;
   text-orientation: sideways-right;
@@ -220,6 +220,7 @@
   text-transform: uppercase;
 
   margin: auto;
+  padding: 0;
 }
 
 #to-contact {
@@ -246,7 +247,7 @@
 #bg-title {
   letter-spacing: 3px;
   text-transform: uppercase;
-  font-size: 5vw;
+  font-size: 10vh;
   font-weight: bold;
 
   color: #D62828;
