--- a/resources/base.css
+++ b/resources/base.css
@@ -71,49 +71,12 @@
   transition: 1s;
 }
 
-.intro {
-  color: #EAE2B7;
-  font-size: 1.75vw;
-  cursor: default;
-  padding-top: 12.5vw;
-  margin-left: 12vw;
-
-  position: absolute;
-  top: 0;
-
-  z-index: 2;
-}
-
 .pop-up {
   text-decoration: none;
 }
 
 .typewrite {
   color: #EAE2B7;
-}
-
-.topnav {
-  margin: 0;
-  left: 0;
-  top: 0;
-  position: fixed;
-  height: 100%;
-  width: 6vw;
-  overflow: hidden;
-  display: grid;
-
-  z-index: 99;
-
-  padding-left: 1rem;
-  padding-right: 1rem;
-
-  background-color: none;
-  transition: 1s;
-}
-
-.topnav:hover {
-  background-color: #D62828;
-  transition: 1s;
 }
 
 .background-text {
@@ -125,48 +88,51 @@
   z-index: -1;
 }
 
-.project-box {
-  margin: 40vh 7vw;
-
-  height: 100vh;
-  width: 40vw;
-  opacity: 0.7;
-
-  background-color: black;
-
-  transition: 1s;
-}
-
-.project-box:hover {
-  opacity: 1;
-  width: 41vw;
-  height: 101vh;
-
-  transition: 1s;
-}
-
 .project-image {
-  background-color: white;
   height: 65vh;
   width: 100%;
-}
 
-.project-text {
-  padding: 2vh 2vw;
-  color: white;
-  line-height: 2vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .project-text h3 {
   font-size: 4vh;
 }
 
-.project-text h4 {
+.project-text h3 .Subtitle {
   font-size: 3vh;
+}
+
+.project-text h4 {
+  font-size: 2.5vh;
 }
 
 .project-text p {
   font-size: 2vh;
+}
+
+.project-button {
+  margin-top: 6vh;
+}
+
+.project-button a {
+  background-color: white;
+  color: black;
+  text-decoration: none;
+  padding: 1.5vh 1.5vw;
+  font-size: 2.5vh;
+
+  font-weight: bolder;
+  text-transform: uppercase;
+
+  transition: 1s;
+}
+
+.project-button a:hover {
+  background-color: #FCBF49;
+  transition: 1s;
 }
 
 .footer {
@@ -188,46 +154,6 @@
 #infoexit:hover {
   color: lightgray;
   transition: 1s;
-}
-
-#navmenu, #to-contact {
-  color: #FCBF49;
-  transition: 1s;
-  cursor: pointer;
-  font-size: 2rem;
-}
-
-#navmenu:hover, #to-contact:hover, #to-top:hover {
-  color: #EAE287;
-  transition: 1s;
-  cursor: pointer;
-}
-
-#navmenu {
-  margin-top: 6vh;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-}
-
-#navtext {
-  color: #EAE287;
-  font-size: 3vh;
-  cursor: default;
-  writing-mode: vertical-rl;
-  text-orientation: sideways-right;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-
-  margin: auto;
-  padding: 0;
-}
-
-#to-contact {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto;
-  margin-bottom: 6vh;
 }
 
 #to-top {
@@ -252,4 +178,228 @@
 
   color: #D62828;
   cursor: default;
+}
+
+#project-1 {
+  background-image: url("https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/363/577/datas/gallery.jpg");
+}
+
+@media only screen and (min-width: 768px) {
+  .topnav {
+    margin: 0;
+    left: 0;
+    top: 0;
+    position: fixed;
+    height: 100%;
+    width: 6vw;
+    overflow: hidden;
+    display: grid;
+
+    z-index: 99;
+
+    padding-left: 1rem;
+    padding-right: 1rem;
+
+    background-color: none;
+    transition: 1s;
+  }
+
+  .topnav:hover {
+    background-color: #D62828;
+    transition: 1s;
+  }
+
+  .intro {
+    color: #EAE2B7;
+    font-size: 1.75vw;
+    cursor: default;
+    padding-top: 12.5vw;
+    margin-left: 12vw;
+
+    position: absolute;
+    top: 0;
+
+    z-index: 2;
+  }
+
+  .project-box {
+    margin: 30vh 8vw;
+
+    height: 100vh;
+    width: 80vh;
+    opacity: 0.7;
+
+    background-color: black;
+
+    transition: 1s;
+  }
+
+  .project-box:hover {
+    opacity: 1;
+    width: 90vh;
+    height: 101vh;
+
+    transition: 1s;
+  }
+
+  .project-text {
+    padding: 2vh 2vw;
+    color: white;
+    line-height: 2vh;
+  }
+
+  #navmenu, #to-contact {
+    color: #FCBF49;
+    transition: 1s;
+    cursor: pointer;
+    font-size: 2rem;
+  }
+
+  #navmenu:hover, #to-contact:hover, #to-top:hover {
+    color: #EAE287;
+    transition: 1s;
+    cursor: pointer;
+  }
+
+  #navmenu {
+    margin-top: 6vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+  }
+
+  #navtext {
+    color: #EAE287;
+    font-size: 3vh;
+    cursor: default;
+    writing-mode: vertical-rl;
+    text-orientation: sideways-right;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+
+    margin: auto;
+    padding: 0;
+  }
+
+  #to-contact {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: 6vh;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .topnav {
+    margin: 0;
+    left: 0;
+    top: 0;
+    position: fixed;
+    height: 12vh;
+    width: 100%;
+    overflow: hidden;
+    display: grid;
+
+    z-index: 99;
+
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+
+    background-color: none;
+    transition: 1s;
+  }
+
+  .topnav:hover {
+    background-color: #D62828;
+    transition: 1s;
+  }
+
+  .intro {
+    color: #EAE2B7;
+    font-size: 2.3vw;
+    cursor: default;
+
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    text-align: center;
+
+    z-index: 2;
+  }
+
+  .project-box {
+    margin: 30vh auto;
+
+    height: 100vh;
+    width: 72vh;
+    opacity: 0.7;
+
+    background-color: black;
+
+    transition: 1s;
+  }
+
+  .project-box:hover {
+    opacity: 1;
+
+    transition: 1s;
+  }
+
+  .project-text {
+    padding: 2vh 4vw;
+    color: white;
+    line-height: 2vh;
+  }
+
+  .floating:hover {
+      animation-name: floating;
+      animation-duration: 3s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+      margin-left: 0 !important;
+      margin-top: 0 !important;
+  }
+
+  #navmenu, #to-contact {
+    color: #FCBF49;
+    transition: 1s;
+    cursor: pointer;
+    font-size: 2rem;
+  }
+
+  #navmenu:hover, #to-contact:hover, #to-top:hover {
+    color: #EAE287;
+    transition: 1s;
+    cursor: pointer;
+  }
+
+  #navmenu {
+    top: 4vh;
+    left: 6vw;
+
+    position: fixed;
+  }
+
+  #navtext {
+    color: #EAE287;
+    font-size: 3vh;
+    cursor: default;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+
+    top: 3vh;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    position: fixed;
+  }
+
+  #to-contact {
+    top: 4vh;
+    right: 6vw;
+
+    position: fixed;
+  }
 }
