--- a/resources/base.css
+++ b/resources/base.css
@@ -106,11 +106,14 @@
 }
 
 .project-text h4 {
+  margin-top: -1vh;
+  margin-bottom: 3vh;
   font-size: 2.5vh;
 }
 
 .project-text p {
   font-size: 2vh;
+  line-height: 2.5vh;
 }
 
 .project-button {
