--- a/resources/base.css
+++ b/resources/base.css
@@ -97,6 +97,10 @@
   background-size: cover;
 }
 
+.project-text {
+  cursor: default;
+}
+
 .project-text h3 {
   font-size: 4vh;
 }
@@ -118,6 +122,7 @@
 
 .project-button {
   margin-top: 6vh;
+  cursor: pointer;
 }
 
 .project-button a {
@@ -187,7 +192,7 @@
   background-image: url("https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/363/577/datas/gallery.jpg");
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .topnav {
     margin: 0;
     left: 0;
@@ -292,7 +297,7 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 600px) {
   .topnav {
     margin: 0;
     left: 0;
