--- a/resources/base.css
+++ b/resources/base.css
@@ -13,6 +13,7 @@
   filter: blur(5px);
 
   height: 100vh;
+  width: 100vw;
 }
 
 .infomenu {
@@ -192,7 +193,7 @@
   background-image: url("https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/363/577/datas/gallery.jpg");
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   .topnav {
     margin: 0;
     left: 0;
@@ -285,8 +286,11 @@
     letter-spacing: 3px;
     text-transform: uppercase;
 
-    margin: auto;
-    padding: 0;
+    position: fixed;
+    top: 50%;
+    left: 2.4vw;
+
+    transform: translate(0, -50%);
   }
 
   #to-contact {
@@ -297,7 +301,7 @@
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .topnav {
     margin: 0;
     left: 0;
