--- a/resources/base.css
+++ b/resources/base.css
@@ -1,3 +1,226 @@
+@media only screen and (max-width: 992px) {
+  .topnav {
+    margin: 0;
+    left: 0;
+    top: 0;
+    position: fixed;
+    height: 12vh;
+    width: 100%;
+    overflow: hidden;
+    display: grid;
+
+    z-index: 99;
+
+    padding-top: 1vh;
+    padding-bottom: 0.25rem;
+
+    background-color: none;
+    transition: 1s;
+  }
+
+  .topnav:hover {
+    background-color: #D62828;
+    transition: 1s;
+  }
+
+  .intro {
+    color: #EAE2B7;
+    font-size: 2.3vw;
+    cursor: default;
+
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    text-align: center;
+
+    z-index: 2;
+  }
+
+  .project-box {
+    margin: 30vh auto;
+
+    height: 104vh;
+    width: 88vw;
+    opacity: 0.7;
+
+    background-color: black;
+
+    transition: 1s;
+  }
+
+  .project-box:hover {
+    opacity: 1;
+
+    transition: 1s;
+  }
+
+  .project-text {
+    padding: 2vh 4vw;
+    color: white;
+    line-height: 2vh;
+  }
+
+  .floating:hover {
+      animation-name: floating;
+      animation-duration: 3s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+      margin-left: 0 !important;
+      margin-top: 0 !important;
+  }
+
+  #navmenu, #to-contact {
+    color: #FCBF49;
+    transition: 1s;
+    cursor: pointer;
+    font-size: 2rem;
+  }
+
+  #navmenu:hover, #to-contact:hover, #to-top:hover {
+    color: #EAE287;
+    transition: 1s;
+    cursor: pointer;
+  }
+
+  #navmenu {
+    top: 4vh;
+    left: 6vw;
+
+    position: fixed;
+  }
+
+  #navtext {
+    color: #EAE287;
+    font-size: 1rem;
+    cursor: default;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+
+    top: 3.5vh;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+    position: fixed;
+  }
+
+  #to-contact {
+    top: 4vh;
+    right: 6vw;
+
+    position: fixed;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .topnav {
+    margin: 0;
+    left: 0;
+    top: 0;
+    position: fixed;
+    height: 100%;
+    width: 6vw;
+    overflow: hidden;
+    display: grid;
+
+    z-index: 99;
+
+    padding-left: 1rem;
+    padding-right: 1rem;
+
+    background-color: none;
+    transition: 1s;
+  }
+
+  .topnav:hover {
+    background-color: #D62828;
+    transition: 1s;
+  }
+
+  .intro {
+    color: #EAE2B7;
+    font-size: 1.75vw;
+    cursor: default;
+    padding-top: 12.5vw;
+    margin-left: 12vw;
+
+    position: absolute;
+    top: 0;
+
+    z-index: 2;
+  }
+
+  .project-box {
+    margin: 30vh 8vw;
+
+    height: 102vh;
+    width: 40vw;
+    opacity: 0.7;
+
+    background-color: black;
+
+    transition: 1s;
+  }
+
+  .project-box:hover {
+    opacity: 1;
+    width: 45vw;
+    height: 103vh;
+
+    transition: 1s;
+  }
+
+  .project-text {
+    padding: 2vh 2vw;
+    color: white;
+    line-height: 2vh;
+  }
+
+  #navmenu, #to-contact {
+    color: #FCBF49;
+    transition: 1s;
+    cursor: pointer;
+    font-size: 2rem;
+  }
+
+  #navmenu:hover, #to-contact:hover, #to-top:hover {
+    color: #EAE287;
+    transition: 1s;
+    cursor: pointer;
+  }
+
+  #navmenu {
+    margin-top: 6vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+  }
+
+  #navtext {
+    color: #EAE287;
+    font-size: 1.25rem;
+    cursor: default;
+    writing-mode: vertical-rl;
+    text-orientation: sideways-right;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+
+    position: fixed;
+    top: 50%;
+    left: 2.15vw;
+
+    transform: translate(0, -50%);
+  }
+
+  #to-contact {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: 6vh;
+  }
+}
+
 .image-wrapper {
   overflow: hidden;
 }
@@ -8,7 +231,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  margin: -1vw;
+  margin: -0.5rem;
 
   filter: blur(5px);
 
@@ -204,227 +427,4 @@
 
 #project-4 {
   background-image: url("https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/363/577/datas/gallery.jpg");
-}
-
-@media only screen and (max-width: 992px) {
-  .topnav {
-    margin: 0;
-    left: 0;
-    top: 0;
-    position: fixed;
-    height: 12vh;
-    width: 100%;
-    overflow: hidden;
-    display: grid;
-
-    z-index: 99;
-
-    padding-top: 1vh;
-    padding-bottom: 0.25rem;
-
-    background-color: none;
-    transition: 1s;
-  }
-
-  .topnav:hover {
-    background-color: #D62828;
-    transition: 1s;
-  }
-
-  .intro {
-    color: #EAE2B7;
-    font-size: 2.3vw;
-    cursor: default;
-
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, 0);
-
-    text-align: center;
-
-    z-index: 2;
-  }
-
-  .project-box {
-    margin: 30vh auto;
-
-    height: 108vh;
-    width: 60vh;
-    opacity: 0.7;
-
-    background-color: black;
-
-    transition: 1s;
-  }
-
-  .project-box:hover {
-    opacity: 1;
-
-    transition: 1s;
-  }
-
-  .project-text {
-    padding: 2vh 4vw;
-    color: white;
-    line-height: 2vh;
-  }
-
-  .floating:hover {
-      animation-name: floating;
-      animation-duration: 3s;
-      animation-iteration-count: infinite;
-      animation-timing-function: ease-in-out;
-      margin-left: 0 !important;
-      margin-top: 0 !important;
-  }
-
-  #navmenu, #to-contact {
-    color: #FCBF49;
-    transition: 1s;
-    cursor: pointer;
-    font-size: 2rem;
-  }
-
-  #navmenu:hover, #to-contact:hover, #to-top:hover {
-    color: #EAE287;
-    transition: 1s;
-    cursor: pointer;
-  }
-
-  #navmenu {
-    top: 4vh;
-    left: 6vw;
-
-    position: fixed;
-  }
-
-  #navtext {
-    color: #EAE287;
-    font-size: 1rem;
-    cursor: default;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-
-    top: 3.5vh;
-    left: 50%;
-    transform: translate(-50%, 0);
-
-    position: fixed;
-  }
-
-  #to-contact {
-    top: 4vh;
-    right: 6vw;
-
-    position: fixed;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  .topnav {
-    margin: 0;
-    left: 0;
-    top: 0;
-    position: fixed;
-    height: 100%;
-    width: 6vw;
-    overflow: hidden;
-    display: grid;
-
-    z-index: 99;
-
-    padding-left: 1rem;
-    padding-right: 1rem;
-
-    background-color: none;
-    transition: 1s;
-  }
-
-  .topnav:hover {
-    background-color: #D62828;
-    transition: 1s;
-  }
-
-  .intro {
-    color: #EAE2B7;
-    font-size: 1.75vw;
-    cursor: default;
-    padding-top: 12.5vw;
-    margin-left: 12vw;
-
-    position: absolute;
-    top: 0;
-
-    z-index: 2;
-  }
-
-  .project-box {
-    margin: 30vh 8vw;
-
-    height: 100vh;
-    width: 80vh;
-    opacity: 0.7;
-
-    background-color: black;
-
-    transition: 1s;
-  }
-
-  .project-box:hover {
-    opacity: 1;
-    width: 90vh;
-    height: 101vh;
-
-    transition: 1s;
-  }
-
-  .project-text {
-    padding: 2vh 2vw;
-    color: white;
-    line-height: 2vh;
-  }
-
-  #navmenu, #to-contact {
-    color: #FCBF49;
-    transition: 1s;
-    cursor: pointer;
-    font-size: 2rem;
-  }
-
-  #navmenu:hover, #to-contact:hover, #to-top:hover {
-    color: #EAE287;
-    transition: 1s;
-    cursor: pointer;
-  }
-
-  #navmenu {
-    margin-top: 6vh;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-  }
-
-  #navtext {
-    color: #EAE287;
-    font-size: 1.25rem;
-    cursor: default;
-    writing-mode: vertical-rl;
-    text-orientation: sideways-right;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-
-    position: fixed;
-    top: 50%;
-    left: 2.15vw;
-
-    transform: translate(0, -50%);
-  }
-
-  #to-contact {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: 6vh;
-  }
 }
