--- a/resources/base.css
+++ b/resources/base.css
@@ -4,17 +4,14 @@
     left: 0;
     top: 0;
     position: fixed;
-    height: 12vh;
+    height: 16vh;
     width: 100%;
     overflow: hidden;
     display: grid;
 
     z-index: 99;
 
-    padding-top: 1vh;
-    padding-bottom: 0.25rem;
-
-    background-color: none;
+    background-color: #D62828;
     transition: 1s;
   }
 
@@ -41,7 +38,7 @@
   .project-box {
     margin: 30vh auto;
 
-    height: 104vh;
+    height: 108vh;
     width: 88vw;
     opacity: 0.7;
 
@@ -75,7 +72,7 @@
     color: #FCBF49;
     transition: 1s;
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 8vh;
   }
 
   #navmenu:hover, #to-contact:hover, #to-top:hover {
@@ -93,7 +90,7 @@
 
   #navtext {
     color: #EAE287;
-    font-size: 1rem;
+    font-size: 4vh;
     cursor: default;
     letter-spacing: 3px;
     text-transform: uppercase;
@@ -406,7 +403,7 @@
 #bg-title {
   letter-spacing: 3px;
   text-transform: uppercase;
-  font-size: 10vh;
+  font-size: 5vw;
   font-weight: bold;
 
   color: #D62828;
