--- a/resources/base.css
+++ b/resources/base.css
@@ -193,7 +193,7 @@
   #bg-title {
     letter-spacing: 3px;
     text-transform: uppercase;
-    font-size: 20vw;
+    font-size: 7.5vh;
     font-weight: bold;
 
     color: #D62828;
