--- a/resources/base.css
+++ b/resources/base.css
@@ -12,6 +12,8 @@
     border-color: white;
     border-width: 0.25vw;
     border-style: solid;
+
+    cursor: default;
   }
 
   .info-nav h3 {
@@ -125,19 +127,82 @@
 
     background-color: black;
 
-    transition: 1s;
+    transition: 0.5s;
   }
 
   .project-box:hover {
     opacity: 1;
 
-    transition: 1s;
+    transition: 0.5s;
   }
 
   .project-text {
     padding: 2vh 4vw;
     color: white;
     line-height: 2vh;
+  }
+
+  .project-more {
+    margin: 0vh 4.5vw;
+
+    padding-top: 1vh;
+    padding-bottom: 7vh;
+
+    height: 30vh;
+    opacity: 0.7;
+
+    background-color: black;
+
+    transition: 0.5s;
+  }
+
+  .project-more:hover {
+    opacity: 1;
+
+    transition: 0.5s;
+  }
+
+  .project-more h2 {
+    color: #EAE2B7;
+    font-size: 3vh;
+
+    text-transform: uppercase;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    cursor: default;
+    margin-bottom: 2vh;
+  }
+
+  .project-more-buttons {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+
+    width: 70vw;
+  }
+
+  .project-more-buttons h3 {
+    background-color: black;
+    color: white;
+    padding: 2vh 4vw;
+    text-align: center;
+    font-size: 2vh;
+
+    border-width: 0.375vh;
+    border-color: white;
+    border-style: solid;
+
+    cursor: pointer;
+
+    transition: 1s;
+  }
+
+  .project-more-buttons h3:hover {
+    background-color: white;
+    color: black;
+
+    transition: 1s;
   }
 
   .floating:hover {
@@ -193,7 +258,7 @@
   #bg-title {
     letter-spacing: 3px;
     text-transform: uppercase;
-    font-size: 5vh;
+    font-size: 10vw;
     font-weight: bold;
 
     color: #D62828;
@@ -229,6 +294,8 @@
     border-color: white;
     border-width: 0.25vw;
     border-style: solid;
+
+    cursor: default;
   }
 
   .info-nav h3 {
@@ -343,7 +410,7 @@
 
     background-color: black;
 
-    transition: 1s;
+    transition: 0.5s;
   }
 
   .project-box:hover {
@@ -351,13 +418,82 @@
     width: 45vw;
     height: 103vh;
 
-    transition: 1s;
+    transition: 0.5s;
   }
 
   .project-text {
     padding: 2vh 2vw;
     color: white;
     line-height: 2vh;
+  }
+
+  .project-more {
+    margin: 0vh 8vw;
+
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+
+    opacity: 0.7;
+
+    background-color: black;
+
+    transition: 0.5s;
+  }
+
+  .project-more:hover {
+    opacity: 1;
+
+    padding-top: 2vh;
+    padding-bottom: 3vh;
+
+    transition: 0.5s;
+  }
+
+  .project-more h2 {
+    color: #EAE2B7;
+    font-size: 2.25vw;
+
+    text-transform: uppercase;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    cursor: default;
+    margin-bottom: 1vh;
+  }
+
+  .project-more-buttons {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+
+    width: 70vw;
+
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 2vw;
+  }
+
+  .project-more-buttons h3 {
+    background-color: black;
+    color: white;
+    padding: 1.5vh 4vw;
+    text-align: center;
+    font-size: 1.5vw;
+
+    border-width: 0.5vh;
+    border-color: white;
+    border-style: solid;
+
+    cursor: pointer;
+
+    transition: 1s;
+  }
+
+  .project-more-buttons h3:hover {
+    background-color: white;
+    color: black;
+
+    transition: 1s;
   }
 
   #navmenu, #to-contact {
@@ -433,17 +569,20 @@
 }
 
 .bg-image {
-  background-image: url("https://community.wolfram.com/c/portal/getImageAttachment?filename=hopf14.gif&userId=610054");
-  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  width: 100vw;
   margin: -0.5rem;
+}
 
-  filter: blur(5px);
+.bg-image-main {
+  background-image: url("https://community.wolfram.com/c/portal/getImageAttachment?filename=hopf14.gif&userId=610054");
+  background-attachment: fixed;
 
   height: 100vh;
-  width: 100vw;
+
+  filter: blur(5px);
 }
 
 .infomenu {
@@ -521,7 +660,6 @@
 
 .project-button {
   margin-top: 6vh;
-  cursor: pointer;
 }
 
 .project-button a {
@@ -533,6 +671,7 @@
 
   font-weight: bolder;
   text-transform: uppercase;
+  cursor: pointer;
 
   transition: 1s;
 }
@@ -568,13 +707,13 @@
 }
 
 #project-2 {
-  background-image: url("https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/363/577/datas/gallery.jpg");
+  background-image: url("../images/qtma-logo.jpg");
 }
 
 #project-3 {
-  background-image: url("https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/363/577/datas/gallery.jpg");
+  background-image: url("https://i.cbc.ca/1.5076326.1553860197!/fileImage/httpImage/image.jpg_gen/derivatives/original_780/a-sketch-of-the-hyperloop-design.jpg");
 }
 
 #project-4 {
-  background-image: url("https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/363/577/datas/gallery.jpg");
+  background-image: url("../images/matlab-placeholder.png");
 }
