Updated image size

--- a/resources/base.css
+++ b/resources/base.css
@@ -967,7 +967,7 @@
 
 #project-1 {
   background-image: url("../images/scannAR.gif");
-  background-size: 15vw 65vh;
+  background-size: 200px 410px;
   background-repeat: no-repeat;
 }
 
