updated project images

--- a/resources/base.css
+++ b/resources/base.css
@@ -976,7 +976,7 @@
 }
 
 #project-3 {
-  background-image: url("https://i.cbc.ca/1.5076326.1553860197!/fileImage/httpImage/image.jpg_gen/derivatives/original_780/a-sketch-of-the-hyperloop-design.jpg");
+  background-image: url("../images/hyperloop.png");
 }
 
 #project-4 {
