--- a/resources/base.css
+++ b/resources/base.css
@@ -976,7 +976,7 @@
 }
 
 #project-3 {
-  background-image: url("../images/hyperloop.png");
+  background-image: url("../images/hyperloop.PNG");
 }
 
 #project-4 {
