fixing hyperloop image x2

--- a/resources/base.css
+++ b/resources/base.css
@@ -976,7 +976,7 @@
 }
 
 #project-3 {
-  background-image: url("../images/hyperloop.PNG");
+  background-image: url("../images/hyperloop.jpg");
 }
 
 #project-4 {
