--- a/resources/base.css
+++ b/resources/base.css
@@ -1014,12 +1014,12 @@
 
 .contacts-form h2 {
   font-weight: bolder;
-  font-size: 24px;
+  font-size: 2vw;
 }
 
 .contacts-form h3 {
   font-weight: lighter;
-  font-size: 16px;
+  font-size: 1.25vw;
   margin-top: -8px;
   margin-bottom: 7.5vh;
 }
