Fixing Loco image

--- a/resources/base.css
+++ b/resources/base.css
@@ -1176,7 +1176,7 @@
 }
 
 #project-2 {
-  background-image: url("../images/qtma-logo.png");
+  background-image: url("../images/qtma-logo.jpg");
 }
 
 #project-3 {
