Updated resume and change 3rd displayed project

--- a/resources/base.css
+++ b/resources/base.css
@@ -1181,7 +1181,7 @@
 }
 
 #project-3 {
-  background-image: url("../images/hyperloop.jpg");
+  background-image: url("../images/ReLeaf.jpg");
 }
 
 #project-4 {
