--- a/resources/base.css
+++ b/resources/base.css
@@ -120,8 +120,8 @@
 
   .project-box {
     margin: 20vh auto;
+    padding-bottom: 4vh;
 
-    height: 108vh;
     width: 88vw;
     opacity: 0.7;
 
@@ -554,8 +554,8 @@
 
   .project-box {
     margin: 30vh 8vw;
+    padding-bottom: 4vh;
 
-    height: 102vh;
     width: 40vw;
     opacity: 0.7;
 
@@ -567,7 +567,7 @@
   .project-box:hover {
     opacity: 1;
     width: 45vw;
-    height: 103vh;
+    padding-bottom: 6vh;
 
     transition: 0.5s;
   }
@@ -954,6 +954,7 @@
   margin-top: -1vh;
   margin-bottom: 3vh;
   font-size: 2.5vh;
+  line-height: 2.75vh;
 }
 
 .project-text p {
