--- a/resources/base.css
+++ b/resources/base.css
@@ -277,7 +277,7 @@
     font-size: 5vh;
   }
 
-  .about-text h2 {
+  .about-text h2, .about-text h2 a {
     color: #EAE287;
     font-size: 2.5vh;
     margin-bottom: 5vh;
@@ -711,7 +711,7 @@
     font-size: 2.5vw;
   }
 
-  .about-text h2 {
+  .about-text h2, .about-text h2 a {
     color: #EAE287;
     font-size: 1.25vw;
     margin-bottom: 5vh;
